<resources>
    <string name="app_name">Coop</string>
    <string name="sign_in_with_google">Sign in With Google</string>
    <string name="example">Example</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="email_address">Email address</string>
    <string name="sign_out">Sign out</string>
    <string name="title_activity_sidepanel">SidepanelActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="username">Param Bhatt</string>
    //Currently statically typed, have to implement it to dynamic typed and get info from firebase
    auth
    <string name="user_email">f20180862@hyderabad.bits-pilani.ac.in</string>
    //Currently statically typed, have to implement it to dynamic typed and get info from firebase
    auth
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_delete">Delete</string>
    <string name="menu_topics">Topics</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="follow">Follow this</string>
    <string name="comment">Comment</string>
    <string name="commentText">Make a comment</string>
    <string name="share">Share</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="search">Search</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="add_topic">Add Topic</string>
    <string name="topic">Topic</string>
    <string name="makePost">Write your post here</string>
    <string name="newPostTitle">Title of your post</string>
    <string name="post">POST</string>
    <string name="newPost">New Post</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="followers">Followers:</string>
    <string name="home">Home</string>
    <string name="no_results">NO RESULTS</string>
</resources>