<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".topicViewActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".topicViewActivity"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/topicHeader"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/white"
            android:background="@drawable/nav_layout_bg"
            android:padding="15dp"
            android:textSize="40sp"
            android:textStyle="bold"
            android:text="@string/example"
            android:shadowRadius="15"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@id/topicHeader"
            app:layout_constraintTop_toBottomOf="@id/topicHeader"
            android:weightSum="2"
            android:id="@+id/topicSubHeader"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:layout_marginTop="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="10dp"
                android:orientation="vertical"
                android:text="@string/example"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:layout_weight="1"
                android:id="@+id/followerCount"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/followButton"
                android:layout_weight="1"
                android:textSize="15sp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:text="@string/follow"
                android:backgroundTint="@color/colorAccent"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/topicSubHeader"
            app:layout_constraintTop_toBottomOf="@id/topicSubHeader"
            />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/my_recycler_view"
            android:src="@drawable/ic_baseline_add_24"
            android:contentDescription="@string/newPost"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            app:rippleColor="@color/colorAccent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        android:id="@+id/nav_view"
        android:fitsSystemWindows="true"
        android:layout_gravity="start"/>
</androidx.drawerlayout.widget.DrawerLayout>
