<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".postViewActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".postViewActivity">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/postTitle"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/white"
            android:background="@drawable/nav_layout_bg"
            android:shadowRadius="15"
            android:textSize="40sp"
            android:textStyle="bold"
            android:text="@string/example"
            android:padding="15dp"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/postBody"
            android:padding="15dp"
            android:background="@drawable/text_rect_border"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/postTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/colorAccent"
            android:textSize="25dp"
            android:text="@string/example"
            android:textAlignment="textStart"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:id="@+id/buttonPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="8"
            app:layout_constraintStart_toStartOf="@id/postBody"
            app:layout_constraintTop_toBottomOf="@id/postBody">

            <Button
                android:id="@+id/upvoteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableBottom="@drawable/ic_baseline_arrow_upward_24"
                android:textColor="@color/white"
                android:shadowColor="@color/black"/>

            <TextView
                android:id="@+id/upvote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:hint="@string/commentText"
                android:orientation="vertical"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15dp" />

            <Button
                android:id="@+id/downvoteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:icon="@drawable/ic_baseline_arrow_downward_24"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/dowvote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:hint="@string/commentText"
                android:orientation="vertical"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@id/buttonPanel"
            app:layout_constraintTop_toBottomOf="@id/buttonPanel"
            android:weightSum="9"
            android:id="@+id/topicSubHeader"
            android:layout_margin="10dp"
            android:layout_marginTop="4dp">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_marginHorizontal="10dp"
                android:paddingHorizontal="4dp"
                android:orientation="vertical"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:layout_weight="8"
                android:id="@+id/newComment"
                android:hint="@string/commentText"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/commentButton"
                android:layout_weight="1"
                android:textSize="15dp"
                android:layout_marginHorizontal="5dp"
                android:paddingHorizontal="20sp"
                android:textColor="@color/white"
                android:text="@string/comment"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/post_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:scrollbars="vertical"
            android:layout_marginHorizontal="10dp"
            android:paddingHorizontal="15dp"
            android:paddingVertical="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/postBody"
            app:layout_constraintTop_toBottomOf="@id/topicSubHeader">

        </androidx.recyclerview.widget.RecyclerView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        android:id="@+id/nav_view"
        android:fitsSystemWindows="true"
        android:layout_gravity="start"/>
</androidx.drawerlayout.widget.DrawerLayout>